small misgender fix

--- a/result.html
+++ b/result.html
@@ -444,7 +444,7 @@ ga('send', 'pageview');
 
 [[Мне больше не холодно.|Да, в самый раз./f]]</tw-passagedata><tw-passagedata pid="938" name="Мне слишком жарко./f" tags="" position="1595,414">Если тебе слишком жарко, оденься попрохладнее, включи вентилятор, или отрегулируй кондиционер.
 
-[[Хорошо, я всё исправил.|Да, в самый раз./f]]</tw-passagedata><tw-passagedata pid="939" name="Да, в самый раз./f" tags="" position="1773,303">Вокруг грязно или плохо пахнет?
+[[Хорошо, я всё исправила.|Да, в самый раз./f]]</tw-passagedata><tw-passagedata pid="939" name="Да, в самый раз./f" tags="" position="1773,303">Вокруг грязно или плохо пахнет?
 
 [[Да, мерзко.|Да, мерзко./f]]
 [[Нет, моё окружение в порядке.|Нет, моё окружение в порядке./f]]</tw-passagedata><tw-passagedata pid="940" name="Да, мерзко./f" tags="" position="1727,436">Сложно чувствовать себя хорошо в обстановке, которая кажется мерзкой. Если вокруг грязно, заведи таймер на пять минут и исправь основные проблемы: убери остатки еды, бардак от животных, или грязную одежду.
