--- a/translated.html
+++ b/translated.html
@@ -195,7 +195,7 @@
 
 [[Мне больше не холодно.|Да, в самый раз.]]</tw-passagedata><tw-passagedata pid="38" name="Мне слишком жарко." tags="" position="1595,414">Если тебе слишком жарко, оденься попрохладнее, включи вентилятор, или отрегулируй кондиционер.
 
-[[Хорошо, я всё исправил.|Да, в самый раз.]]</tw-passagedata><tw-passagedata pid="39" name="Да, в самый раз." tags="" position="1773,303">Вокруг грязно или плохо пахнет?
+[[Хорошо, я всё исправил()(а).|Да, в самый раз.]]</tw-passagedata><tw-passagedata pid="39" name="Да, в самый раз." tags="" position="1773,303">Вокруг грязно или плохо пахнет?
 
 [[Да, мерзко.]]
 [[Нет, моё окружение в порядке.]]</tw-passagedata><tw-passagedata pid="40" name="Да, мерзко." tags="" position="1727,436">Сложно чувствовать себя хорошо в обстановке, которая кажется мерзкой. Если вокруг грязно, заведи таймер на пять минут и исправь основные проблемы: убери остатки еды, бардак от животных, или грязную одежду.
