--- a/translated.html
+++ b/translated.html
@@ -93,7 +93,7 @@
 
 Если у тебя с этим возникают регулярные проблемы, можешь установить будильник на смартфоне, чтобы не забывать принимать лекарства в одно и то же время каждый день.
 
-[[Хорошо, я принял все нужные лекарства. Следующий вопрос!|Вода]]</tw-passagedata><tw-passagedata pid="22" name="Вздремнуть" tags="" position="1282,142">Вздремни. Можешь продолжить путешествие по этому руководству, когда проснёшься.
+[[Хорошо, я принял()(а) все нужные лекарства. Следующий вопрос!|Вода]]</tw-passagedata><tw-passagedata pid="22" name="Вздремнуть" tags="" position="1282,142">Вздремни. Можешь продолжить путешествие по этому руководству, когда проснёшься.
 
 В идеале, позволь себе выспаться естественным образом: спи, пока не проснёшься. Конечно, это не всегда возможно. Если так, то установи себе будильник с достаточным запасом, чтобы вовремя проснуться и прийти в себя между коротким сном и возвращением к своим делам.
 
