tiny tweaks after payalnik PR

--- a/translated.html
+++ b/translated.html
@@ -38,7 +38,7 @@
 
 Конечно, это общее руководство, и оно не может гарантированно найти именно твою проблему. Но устранение неполадок — хорошая практика, и мы попытаемся вместе сделать всё возможное.
 
-По нашему опыту, большинство людей, проходящих эту блок-схему, испытывают проблему с душевным равновесием, так что эти вопросы ориентированы на наиболее частые проблемы с ним. 
+По нашему опыту, большинство людей, проходящих эту блок-схему, испытывают проблему с душевным равновесием, так что эти вопросы ориентированы на наиболее частые проблемы с ним.
 
 Знаешь ли ты, почему у тебя плохое настроение, или почему ты переживаешь плохие эмоции? (Учти, любой ответ годится!)
 
@@ -48,7 +48,7 @@
 [[Да, я тревожусь про что-то конкретное.|Конкретное]]
 [[Да, но я не знаю, почему.|Неконкретное]]
 [[Нет, я не чувствую тревоги.|Триггер]]
-[[Тревога была, но я постарал(ся)(ась) отвлечься и получилось, кажется. Я готов()(а) к следующему вопросу.|Триггер]]</tw-passagedata><tw-passagedata pid="11" name="Триггер" tags="" position="2701,2">Тебя что-то задело? Ты непроизвольно прокручиваешь в памяти моменты из прошлого? Тебя угнетает какой-либо травматичный или расстроивший опыт? Тебе приснился яркий кошмар?
+[[Тревога была, но у меня, кажется, получилось позаботиться о себе. Я готов()(а) к следующему вопросу.|Триггер]]</tw-passagedata><tw-passagedata pid="11" name="Триггер" tags="" position="2701,2">Тебя что-то задело? Ты непроизвольно прокручиваешь в памяти моменты из прошлого? Тебя угнетает какой-либо травматичный или расстроивший опыт? Тебе приснился яркий кошмар?
 
 [[Да, я задет()(а).|Я задет]]
 [[Нет, я не чувствую себя задет(ым)(ой).|Диссоциация]]
@@ -74,17 +74,17 @@
 
 [[Я полчаса поразвлекал(ся)(ась), и теперь готов()(а) к следующему шагу.|Переоценка]]</tw-passagedata><tw-passagedata pid="18" name="Переоценка" tags="" position="4801,0">Мы дошли до конца этого руководства по заботе о себе.
 
-Пора еще раз взглянуть на ситуацию. Может быть, теперь, когда ты всё это проделал()(а), тебе уже лучше — отлично! Возможно, нет, это тоже нормально. Но надеюсь, что у тебя что-то прояснилось и ты понял, как дальше позаботиться о себе.
+Пора еще раз взглянуть на ситуацию. Может быть, теперь, когда ты всё это проделал()(а), тебе уже лучше — отлично! Возможно, нет, это тоже нормально. Но надеюсь, что у тебя что-то прояснилось и ты понял()(а), как дальше позаботиться о себе.
 
 Ты заслуживаешь заботы о себе. Даже если это сложно, пожалуйста, постарайся!
 
 Удачи!</tw-passagedata><tw-passagedata pid="19" name="Перекус" tags="" position="343,142">Когда тебе надо перекусить, просто сунь какую-нибудь простую еду себе в рот.
 
-Если тебе хочется какой-нибудь определенной еды, это нормально! Тебе не нужно всегда есть идеально здоровую еду. Никто так не делает! Просто привыкни отмечать, сколько ты ешь и насколько это здоровая еда. Всё может быть в порядке, если ты просто доверишься своему организму и будешь выбирать то, в чём нуждается твоё тело.
+Если тебе хочется какой-нибудь определенной еды, это нормально! Тебе не нужно всегда есть идеально здоровую еду. Никто так не делает! Просто привыкни отмечать, сколько ты ешь и насколько это здоровая еда. Всё будет нормально, если ты просто доверишься своему организму и будешь выбирать то, в чём нуждается твоё тело.
 
 [[Хорошо, я перекусил()(а).|Лекарства]]</tw-passagedata><tw-passagedata pid="20" name="Поесть" tags="" position="343,279">Ты давно не ел()(а), и твоему телу нужно топливо. Пора позавтракать, пообедать или поужинать.
 
-Если тебе хочется какой-нибудь определенной еды, это нормально! Тебе не нужно всегда есть идеально здоровую еду. Никто так не делает! Просто привыкни отмечать, сколько ты ешь и насколько это здоровая еда. Всё может быть в порядке, если ты просто доверишься своему организму и будешь выбирать то, в чём нуждается твоё тело.
+Если тебе хочется какой-нибудь определенной еды, это нормально! Тебе не нужно всегда есть идеально здоровую еду. Никто так не делает! Просто привыкни отмечать, сколько ты ешь и насколько это здоровая еда. Всё будет нормально, если ты просто доверишься своему организму и будешь выбирать то, в чём нуждается твоё тело.
 
 [[Я поел()(а) и готов()(а) к следующему шагу.|Лекарства]]
 [[Мне нужно помочь!]]</tw-passagedata><tw-passagedata pid="21" name="Таблетки" tags="" position="735,144">Лекарства нужно принимать по расписанию, иначе телу может стать плоховато.
