link to the original text

--- a/result.html
+++ b/result.html
@@ -21,8 +21,8 @@ ga('send', 'pageview');
 <tw-story></tw-story>
 <tw-storydata name="Тебе хреново." startnode="2" creator="Twine" creator-version="2.0.8" ifid="1C56748E-5F6E-4CEE-8A15-9F93C8243C71" format="Harlowe" options=""><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script>
 
-<tw-passagedata pid="1" name="Untitled Passage" tags="" position="3798,1900">Double-click this passage to edit it.</tw-passagedata>
-<tw-passagedata pid="2" name="Welcome!" tags="" position="8,6">Эта страница — интерактивная блок-схема для людей, у которых проблемы с заботой о себе и отслеживанием своего состояния. Схема разработана так, чтобы как можно меньше тебя нагружать, чтобы каждое решение давалось максимально легко.
+<tw-passagedata pid="2" name="Welcome!" tags="" position="8,6"><small>Оригинал: <a href="http://philome.la/jace_harr/you-feel-like-shit-an-interactive-self-care-guide/play">You feel like shit</a> by <a href="https://jaceharr.com/about/">Jace Harr</a>.</small>
+Эта страница — интерактивная блок-схема для людей, у которых проблемы с заботой о себе и отслеживанием своего состояния. Схема разработана так, чтобы как можно меньше тебя нагружать, чтобы каждое решение давалось максимально легко.
 
 Выдели немного времени — меньше часа — чтобы пройти все шаги. Не торопись и не пропускай шаги, просто следуй инструкциям. Забота о себе — это важно, и ты заслуживаешь того, чтобы уделить себе время.
 
