--- a/result.html
+++ b/result.html
@@ -51,9 +51,9 @@ ga('send', 'pageview');
 [[Нет, моё тело чувствует себя хорошо.|Дискомфорт/m]]
 [[Да, что-то болит.|Ой/m]]</tw-passagedata><tw-passagedata pid="8" name="Дискомфорт/m" tags="" position="1804,4">Теперь  проверим, не испытываешь ли ты другие неудобства.
 
-Может быть, тебя напрягает или огорчает что-либо в твоём окружении?
+Может быть, тебя напрягает или огорчает что-либо в окружающей обстановке?
 
-[[Да, моё окружение не идеально.|Среда/m]]
+[[Да, обстановка не идеальна.|Среда/m]]
 [[Нет, тут всё в порядке.|Чистота/m]]</tw-passagedata><tw-passagedata pid="9" name="Ты знаешь?/m" tags="" position="2103,0">Мы проверили причины плохого самочувствия, связанные с физиологией. Теперь давай разберёмся с эмоциональными.
 
 Конечно, это общее руководство, и оно не может гарантированно найти именно твою проблему. Но устранение неполадок — хорошая практика, и мы попытаемся вместе сделать всё возможное.
@@ -218,11 +218,11 @@ ga('send', 'pageview');
 [[Хорошо, я всё исправил.|Да, в самый раз./m]]</tw-passagedata><tw-passagedata pid="39" name="Да, в самый раз./m" tags="" position="1773,303">Вокруг грязно или плохо пахнет?
 
 [[Да, мерзко.|Да, мерзко./m]]
-[[Нет, моё окружение в порядке.|Нет, моё окружение в порядке./m]]</tw-passagedata><tw-passagedata pid="40" name="Да, мерзко./m" tags="" position="1727,436">Сложно чувствовать себя хорошо в обстановке, которая кажется мерзкой. Если вокруг грязно, заведи таймер на пять минут и исправь основные проблемы: убери остатки еды, бардак от животных или грязную одежду.
+[[Нет, всё в порядке.|Нет, обстановка в порядке./m]]</tw-passagedata><tw-passagedata pid="40" name="Да, мерзко./m" tags="" position="1727,436">Сложно чувствовать себя хорошо в обстановке, которая кажется мерзкой. Если вокруг грязно, заведи таймер на пять минут и исправь основные проблемы: убери остатки еды, бардак от животных или грязную одежду.
 
 Работа по дому может пугать и выматывать, но мы не позволим ей. Мы просто делаем короткую пятиминутную уборку, чтобы сделать себя и наш дом чуточку счастливее!
 
-[[Хорошо, я немного прибрался!|Нет, моё окружение в порядке./m]]</tw-passagedata><tw-passagedata pid="41" name="Нет, моё окружение в порядке./m" tags="" position="1875,428">Ты чувствуешь себя небезопасно из-за большого количества людей или, наоборот, нехватки людей вокруг?
+[[Хорошо, я немного прибрался!|Нет, обстановка в порядке./m]]</tw-passagedata><tw-passagedata pid="41" name="Нет, обстановка в порядке./m" tags="" position="1875,428">Ты чувствуешь себя небезопасно из-за большого количества людей или, наоборот, нехватки людей вокруг?
 
 [[Да, тут слишком много людей, или людей, которые вызывают у меня дискомфорт.|Ааа люди/m]]
 [[Я в одиночестве, и мне это не нравится|Ааа нет людей/m]]
@@ -280,9 +280,9 @@ ga('send', 'pageview');
 [[Нет, моё тело чувствует себя хорошо.|Дискомфорт/f]]
 [[Да, что-то болит.|Ой/f]]</tw-passagedata><tw-passagedata pid="98" name="Дискомфорт/f" tags="" position="1804,4">Теперь  проверим, не испытываешь ли ты другие неудобства.
 
-Может быть, тебя напрягает или огорчает что-либо в твоём окружении?
+Может быть, тебя напрягает или огорчает что-либо в окружающей обстановке?
 
-[[Да, моё окружение не идеально.|Среда/f]]
+[[Да, обстановка не идеальна.|Среда/f]]
 [[Нет, тут всё в порядке.|Чистота/f]]</tw-passagedata><tw-passagedata pid="99" name="Ты знаешь?/f" tags="" position="2103,0">Мы проверили причины плохого самочувствия, связанные с физиологией. Теперь давай разберёмся с эмоциональными.
 
 Конечно, это общее руководство, и оно не может гарантированно найти именно твою проблему. Но устранение неполадок — хорошая практика, и мы попытаемся вместе сделать всё возможное.
@@ -447,11 +447,11 @@ ga('send', 'pageview');
 [[Хорошо, я всё исправила.|Да, в самый раз./f]]</tw-passagedata><tw-passagedata pid="939" name="Да, в самый раз./f" tags="" position="1773,303">Вокруг грязно или плохо пахнет?
 
 [[Да, мерзко.|Да, мерзко./f]]
-[[Нет, моё окружение в порядке.|Нет, моё окружение в порядке./f]]</tw-passagedata><tw-passagedata pid="940" name="Да, мерзко./f" tags="" position="1727,436">Сложно чувствовать себя хорошо в обстановке, которая кажется мерзкой. Если вокруг грязно, заведи таймер на пять минут и исправь основные проблемы: убери остатки еды, бардак от животных или грязную одежду.
+[[Нет, всё в порядке.|Нет, обстановка в порядке./f]]</tw-passagedata><tw-passagedata pid="940" name="Да, мерзко./f" tags="" position="1727,436">Сложно чувствовать себя хорошо в обстановке, которая кажется мерзкой. Если вокруг грязно, заведи таймер на пять минут и исправь основные проблемы: убери остатки еды, бардак от животных или грязную одежду.
 
 Работа по дому может пугать и выматывать, но мы не позволим ей. Мы просто делаем короткую пятиминутную уборку, чтобы сделать себя и наш дом чуточку счастливее!
 
-[[Хорошо, я немного прибралась!|Нет, моё окружение в порядке./f]]</tw-passagedata><tw-passagedata pid="941" name="Нет, моё окружение в порядке./f" tags="" position="1875,428">Ты чувствуешь себя небезопасно из-за большого количества людей или, наоборот, нехватки людей вокруг?
+[[Хорошо, я немного прибралась!|Нет, обстановка в порядке./f]]</tw-passagedata><tw-passagedata pid="941" name="Нет, обстановка в порядке./f" tags="" position="1875,428">Ты чувствуешь себя небезопасно из-за большого количества людей или, наоборот, нехватки людей вокруг?
 
 [[Да, тут слишком много людей, или людей, которые вызывают у меня дискомфорт.|Ааа люди/f]]
 [[Я в одиночестве, и мне это не нравится|Ааа нет людей/f]]
