--- a/translated.html
+++ b/translated.html
@@ -31,9 +31,9 @@
 [[Нет, моё тело чувствует себя хорошо.|Дискомфорт]]
 [[Да, что-то болит.|Ой]]</tw-passagedata><tw-passagedata pid="8" name="Дискомфорт" tags="" position="1804,4">Теперь  проверим, не испытываешь ли ты другие неудобства.
 
-Может быть, тебя напрягает или огорчает что-либо в твоём окружении?
+Может быть, тебя напрягает или огорчает что-либо в окружающей обстановке?
 
-[[Да, моё окружение не идеально.|Среда]]
+[[Да, обстановка не идеальна.|Среда]]
 [[Нет, тут всё в порядке.|Чистота]]</tw-passagedata><tw-passagedata pid="9" name="Ты знаешь?" tags="" position="2103,0">Мы проверили причины плохого самочувствия, связанные с физиологией. Теперь давай разберёмся с эмоциональными.
 
 Конечно, это общее руководство, и оно не может гарантированно найти именно твою проблему. Но устранение неполадок — хорошая практика, и мы попытаемся вместе сделать всё возможное.
@@ -198,11 +198,11 @@
 [[Хорошо, я всё исправил()(а).|Да, в самый раз.]]</tw-passagedata><tw-passagedata pid="39" name="Да, в самый раз." tags="" position="1773,303">Вокруг грязно или плохо пахнет?
 
 [[Да, мерзко.]]
-[[Нет, моё окружение в порядке.]]</tw-passagedata><tw-passagedata pid="40" name="Да, мерзко." tags="" position="1727,436">Сложно чувствовать себя хорошо в обстановке, которая кажется мерзкой. Если вокруг грязно, заведи таймер на пять минут и исправь основные проблемы: убери остатки еды, бардак от животных или грязную одежду.
+[[Нет, всё в порядке.|Нет, обстановка в порядке.]]</tw-passagedata><tw-passagedata pid="40" name="Да, мерзко." tags="" position="1727,436">Сложно чувствовать себя хорошо в обстановке, которая кажется мерзкой. Если вокруг грязно, заведи таймер на пять минут и исправь основные проблемы: убери остатки еды, бардак от животных или грязную одежду.
 
 Работа по дому может пугать и выматывать, но мы не позволим ей. Мы просто делаем короткую пятиминутную уборку, чтобы сделать себя и наш дом чуточку счастливее!
 
-[[Хорошо, я немного прибрал(ся)(ась)!|Нет, моё окружение в порядке.]]</tw-passagedata><tw-passagedata pid="41" name="Нет, моё окружение в порядке." tags="" position="1875,428">Ты чувствуешь себя небезопасно из-за большого количества людей или, наоборот, нехватки людей вокруг?
+[[Хорошо, я немного прибрал(ся)(ась)!|Нет, обстановка в порядке.]]</tw-passagedata><tw-passagedata pid="41" name="Нет, обстановка в порядке." tags="" position="1875,428">Ты чувствуешь себя небезопасно из-за большого количества людей или, наоборот, нехватки людей вокруг?
 
 [[Да, тут слишком много людей, или людей, которые вызывают у меня дискомфорт.|Ааа люди]]
 [[Я в одиночестве, и мне это не нравится|Ааа нет людей]]
