--- a/result.html
+++ b/result.html
@@ -119,7 +119,7 @@ ga('send', 'pageview');
 
 [[Ок, я хорошо отдохнул.|Боль/m]]</tw-passagedata><tw-passagedata pid="23" name="Ой/m" tags="" position="1613,146">Если врач прописал тебе лекарства от боли, последуй его инструкциям сейчас.
 
-Против ломоты и боли прими аспирин. Ещё ты можешь приложить грелку или лёд к месту, которое болит.
+Против ломоты и боли прими аспирин или ибупрофен. Ещё ты можешь приложить грелку или лёд к месту, которое болит.
 
 Если у тебя болит живот, от этого есть лекарства: например, Пепто-Бисмол, и горячий чай тоже может помочь.
 
@@ -348,7 +348,7 @@ ga('send', 'pageview');
 
 [[Ок, я хорошо отдохнула.|Боль/f]]</tw-passagedata><tw-passagedata pid="923" name="Ой/f" tags="" position="1613,146">Если врач прописал тебе лекарства от боли, последуй его инструкциям сейчас.
 
-Против ломоты и боли прими аспирин. Ещё ты можешь приложить грелку или лёд к месту, которое болит.
+Против ломоты и боли прими аспирин или ибупрофен. Ещё ты можешь приложить грелку или лёд к месту, которое болит.
 
 Если у тебя болит живот, от этого есть лекарства: например, Пепто-Бисмол, и горячий чай тоже может помочь.
 
