--- a/translated.html
+++ b/translated.html
@@ -99,7 +99,7 @@
 
 [[Ок, я хорошо отдохнул()(а).|Боль]]</tw-passagedata><tw-passagedata pid="23" name="Ой" tags="" position="1613,146">Если врач прописал тебе лекарства от боли, последуй его инструкциям сейчас.
 
-Против ломоты и боли прими аспирин. Ещё ты можешь приложить грелку или лёд к месту, которое болит.
+Против ломоты и боли прими аспирин или ибупрофен. Ещё ты можешь приложить грелку или лёд к месту, которое болит.
 
 Если у тебя болит живот, от этого есть лекарства: например, Пепто-Бисмол, и горячий чай тоже может помочь.
 
